--- a/public/mmd.html
+++ b/public/mmd.html
@@ -7,6 +7,9 @@
   <body>
     <!-- MMDが描画されるHTML要素 -->
     <div id="webgl" style="width: 100%;height:100%;"></div>
+    <form name="form1" style="text-align: center; width: 100%;">
+      <button type="button" name="button1">「setTimeoutループ」による表情のアニメーション</button>
+    </form>
     <script src="./build/mmdparser.js"></script>
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
@@ -42,6 +45,11 @@
         let canvasSizeW = parseInt( window.getComputedStyle( document.getElementById( 'webgl' ) ).width );
         let canvasSizeH = parseInt( window.getComputedStyle( document.getElementById( 'webgl' ) ).width ) * 540 / 960;
  
+        // 表情（モーフ）のアニメーションに関連する変数
+        const frameNumber = 4;
+        const frameRate = 24;
+        const morphValue = 0.5;
+
         // DOMの解析が終わったらメインプログラムを実行
         document.addEventListener( 'DOMContentLoaded', function () {
             // シーンの準備
@@ -58,30 +66,24 @@
 
         function prepareScene() {
             // レンダラーを作成
-            // (Constructor) WebGLRenderer( parameters : Object ) : Renederer
             renderer = new THREE.WebGLRenderer( { antialias: true } );
             // 解像度の設定
-            // (Method) .setPixelRatio ( value : number ) : null
             renderer.setPixelRatio( window.devicePixelRatio );
             // 描画サイズの設定
             renderer.setSize( canvasSizeW, canvasSizeH );
             // 背景の色と透明度の設定
-            // (Method) .setClearColor ( color : Color, alpha : Float ) : null
             renderer.setClearColor( 0xffffff, 1.0 );
             // シャドウマッピングの設定
             renderer.shadowMap.enabled = true;
             // シャドウマッピングのタイプの指定
-            // THREE.BasicShadowMap、THREE.PCFShadowMap (default)、THREE.PCFSoftShadowMap、THREE.VSMShadowMapから選択
             renderer.shadowMap.type = THREE.PCFSoftShadowMap;
             // レンダラー出力先の HTML 要素の設定 (canvasは自動生成)
             document.getElementById( 'webgl' ).appendChild( renderer.domElement );
             // OutlineEffectの適用
             effect = new OutlineEffect( renderer );
             // シーンを作成
-            // (Constructor) Scene() : Object3D
             scene = new THREE.Scene();
             // ライト(環境光)を作成し、シーンに追加
-            // (Method) .add ( object : Object3D, ... ) : this
             scene.add( new THREE.AmbientLight( 0xffffff, 0.6 ) );
             // ライト(平行光源)を作成
             light = new THREE.DirectionalLight( 0xffe2b9, 0.4 );
@@ -96,7 +98,6 @@
             // Shadow Mapのoffsetバイアスの設定、Shadow Acneを減らすことができる。
             light.shadow.normalBias = 0.02;
             // Shadow Mapのバイアスの設定、影の中にできるArtefactsを減らすことができる。
-            // (Property) .bias : Float
             light.shadow.bias = -0.0005;
             // 平行光源の設定
             light.shadow.camera.left = -5;
@@ -107,7 +108,6 @@
             light.shadow.camera.near = 0.1;
             light.shadow.camera.far = 20;
             // ライト(平行光源)をシーンに追加
-            // (Method) .add ( object : Object3D, ... ) : this
             scene.add( light );
             light.target.position.copy( new THREE.Vector3( 0, 0, 0 ) );
             // 平行光源のターゲットをシーンに追加
@@ -137,6 +137,7 @@
             LOADER.load (
             // ロードする PMD/PMX ファイル
             './models/mmd/miku2/miku.pmx',
+            // './models/mmd/alicia/MMD/Alicia_solid.pmx',
             // ロード成功時の処理
             function ( mmd ) {
                 // MMD 3Dモデルのメッシュを作成
@@ -170,16 +171,71 @@
         }
     
         function sceneRender() {
-            // (Constructor) window.requestAnimationFrame( callback )
             window.requestAnimationFrame( sceneRender );
             // OutlineEffectの適用
-            // (Method) .render ( scene : Object3D, camera : Camera ) : null
             effect.render( scene, camera );
         }
     
         window.addEventListener( 'resize', function () {
             effect.setSize( parseInt( window.getComputedStyle( document.getElementById( 'webgl' ) ).width ), parseInt( window.getComputedStyle( document.getElementById( 'webgl' ) ).width ) * 540 / 960 );
         }, false );
+
+        document.form1.button1.onclick = async function() {
+            // 同期・非同期による処理 引数は、ターゲットのモーフ（表情）の名前、アニメーションの時間（秒）、開始時点のモーフ（表情）の値、終了時点のモーフ（表情）の値
+            morphAnimation( '笑い', 0.5, 0 );
+            morphAnimation( '真面目', 0.5, 0 );
+            await morphAnimation( 'にっこり', 0.5, 0 );
+            await morphAnimation( 'にっこり', 0.5 );
+            morphAnimation( '笑い', 0.5, 1, 0 );
+            morphAnimation( '真面目', 0.5, 1, 0 );
+            await morphAnimation( 'にっこり', 0.5, 1, 0 );
+        };
+  
+        //-----------------------------------------------------------------------------------------------
+        // setTimeoutループによる表情のアニメーション
+        //-----------------------------------------------------------------------------------------------
+        function morphAnimation( morphName, duration = 0, startValue = 1, endValue = 1 ) {
+            // 非同期処理のためのPromise関数
+            return new Promise( function ( resolve ) {
+                // アニメーションの間隔、24 FPSとなるように間隔を設定
+                const INTERVAL = 1000 / 24;
+                // アニメーションの間隔ごとに足されるモーフ（表情）の値
+                const VALUE_DELTA = ( endValue - startValue ) * INTERVAL / ( duration * 1000 );
+                // .morphTargetDictionaryを使用してモーフ（表情）のインデックスを取得
+                const INDEX = mesh.morphTargetDictionary[ morphName ];
+                // カウント値（時間）
+                let count = 0;
+                // 開始時に開始時点のモーフ（表情）の値を設定
+                mesh.morphTargetInfluences[ INDEX ] = startValue;
+                // 開始時点のモーフ（表情）の値と終了時点のモーフ（表情）の値が同じ場合は、繰り返し処理（setTimeoutループ）を行わずアニメーションの時間（秒）待機してから関数から離脱
+                if ( VALUE_DELTA === 0 ) {
+                // アニメーションの時間（秒）待機
+                setTimeout( function () {
+                    // resolve()により非同期処理が完了
+                    resolve();
+                    return;
+                }, duration * 1000 );
+                }
+                // 繰り返し処理（setTimeoutループ）
+                let repeat = function () {
+                mesh.morphTargetInfluences[ INDEX ] += VALUE_DELTA;
+                if ( count < duration * 1000 ) {
+                    // カウント値がアニメーションの時間（秒）内の場合は、引き続き繰り返し処理を行う
+                    setTimeout( repeat, INTERVAL );
+                } else {
+                    // カウント値がアニメーションの時間（秒）を超えた場合は、繰り返し処理から離脱
+                    // 終了時に終了時点のモーフ（表情）の値を設定
+                    mesh.morphTargetInfluences[ INDEX ] = endValue;
+                    // resolve()により非同期処理が完了
+                    resolve();
+                }
+                // カウント値（時間）を進める
+                count += INTERVAL;
+                }
+                // 繰り返し処理開始のトリガー
+                repeat();
+            } );
+        }
     </script>
   </body>
 </html>
